--- a/Dockerfile.openapi
+++ b/Dockerfile.openapi
@@ -1,16 +1,26 @@
-FROM openapitools/openapi-generator-cli:v7.16.0
+# Multi-arch base image with Java for openapi-generator
+FROM eclipse-temurin:17-jdk
 
 # -o APT::Sandbox::User=root is a workaround for rootless podman setgroups error in Prow env
 RUN apt-get -o APT::Sandbox::User=root update
 RUN apt-get -o APT::Sandbox::User=root install -y make sudo git wget
 
-# Install Go 1.24
-RUN wget https://go.dev/dl/go1.24.0.linux-amd64.tar.gz && \
-    tar -C /usr/local -xzf go1.24.0.linux-amd64.tar.gz && \
-    rm go1.24.0.linux-amd64.tar.gz
+# Install Go 1.24 (auto-detect architecture)
+RUN ARCH=$(dpkg --print-architecture) && \
+    if [ "$ARCH" = "arm64" ] || [ "$ARCH" = "aarch64" ]; then \
+        GO_ARCH="arm64"; \
+    else \
+        GO_ARCH="amd64"; \
+    fi && \
+    wget https://go.dev/dl/go1.24.0.linux-${GO_ARCH}.tar.gz && \
+    tar -C /usr/local -xzf go1.24.0.linux-${GO_ARCH}.tar.gz && \
+    rm go1.24.0.linux-${GO_ARCH}.tar.gz
+
+# Download openapi-generator-cli
+RUN wget https://repo1.maven.org/maven2/org/openapitools/openapi-generator-cli/7.16.0/openapi-generator-cli-7.16.0.jar \
+    -O /usr/local/bin/openapi-generator-cli.jar
 
 RUN mkdir -p /local
-
 
 # Copy the rest of the project
 COPY openapi/openapi.yaml /local/openapi/openapi.yaml
@@ -20,12 +30,16 @@ ENV GOPATH="/uhc"
 ENV GOBIN /usr/local/go/bin/
 ENV CGO_ENABLED=0
 
-# these git and go flags to avoid self signed certificate errors
-
 WORKDIR /local
 
 # Install go-bindata
 RUN go install -a github.com/go-bindata/go-bindata/...@v3.1.2
-RUN bash /usr/local/bin/docker-entrypoint.sh generate -i /local/openapi/openapi.yaml -g go -o /local/pkg/api/openapi
+
+# Generate OpenAPI client
+RUN java -jar /usr/local/bin/openapi-generator-cli.jar generate \
+    -i /local/openapi/openapi.yaml \
+    -g go \
+    -o /local/pkg/api/openapi
+
 RUN rm /local/pkg/api/openapi/go.mod /local/pkg/api/openapi/go.sum
 RUN rm -r /local/pkg/api/openapi/test
