HYPERFLEET-501 - feat: manage oapi-codegen with bingo

--- a/.bingo/variables.env
+++ b/.bingo/variables.env
@@ -8,9 +8,11 @@ if [ -z "$GOBIN" ]; then
 fi
 
 
-GOLANGCI_LINT="${GOBIN}/golangci-lint-v1.64.8"
+GOLANGCI_LINT="${GOBIN}/golangci-lint-v2.7.0"
 
 GOTESTSUM="${GOBIN}/gotestsum-v1.13.0"
 
 MOCKGEN="${GOBIN}/mockgen-v0.6.0"
+
+OAPI_CODEGEN="${GOBIN}/oapi-codegen-v2.5.1"
 
