HYPERFLEET-453/454 - feat: implement health endpoints and graceful shutdown
- Separate health endpoints (8080) from metrics (9090)
- Implement /healthz (liveness) and /readyz (readiness) endpoints
- Add graceful shutdown with SIGTERM/SIGINT signal handling
- Add ReadinessState for coordinated shutdown across components
- Update Helm charts with new port configuration
- Align with HyperFleet architecture standards

--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -53,17 +53,17 @@ spec:
         args:
         - serve
         - --api-server-bindaddress={{ .Values.server.bindAddress | default ":8000" }}
-        - --health-check-server-bindaddress={{ .Values.server.healthBindAddress | default ":8083" }}
-        - --metrics-server-bindaddress={{ .Values.server.metricsBindAddress | default ":8080" }}
+        - --health-server-bindaddress={{ .Values.server.healthBindAddress | default ":8080" }}
+        - --metrics-server-bindaddress={{ .Values.server.metricsBindAddress | default ":9090" }}
         ports:
         - name: http
           containerPort: 8000
           protocol: TCP
         - name: health
-          containerPort: 8083
+          containerPort: 8080
           protocol: TCP
         - name: metrics
-          containerPort: 8080
+          containerPort: 9090
           protocol: TCP
         env:
         {{- if .Values.auth.jwksUrl }}
@@ -82,15 +82,15 @@ spec:
         {{- end }}
         livenessProbe:
           httpGet:
-            path: /healthcheck
+            path: /healthz
             port: health
-          initialDelaySeconds: 30
-          periodSeconds: 10
+          initialDelaySeconds: 15
+          periodSeconds: 20
           timeoutSeconds: 5
           failureThreshold: 3
         readinessProbe:
           httpGet:
-            path: /healthcheck
+            path: /readyz
             port: health
           initialDelaySeconds: 5
           periodSeconds: 5
