--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -74,6 +74,16 @@ spec:
           value: {{ .Values.auth.enableJwt | quote }}
         - name: ENABLE_AUTHZ
           value: {{ .Values.auth.enableAuthz | quote }}
+        {{- if .Values.adapters }}
+        {{- if .Values.adapters.cluster }}
+        - name: HYPERFLEET_CLUSTER_ADAPTERS
+          value: {{ .Values.adapters.cluster | toJson | quote }}
+        {{- end }}
+        {{- if .Values.adapters.nodepool }}
+        - name: HYPERFLEET_NODEPOOL_ADAPTERS
+          value: {{ .Values.adapters.nodepool | toJson | quote }}
+        {{- end }}
+        {{- end }}
         {{- if .Values.env }}
         {{- range .Values.env }}
         - name: {{ .name }}
