HYPERFLEET-579 - fix: Use explicit nil checks for PDB values
Use 'ne ... nil' instead of truthy checks to properly handle
zero values like minAvailable: 0 or maxUnavailable: "0%".

--- a/charts/templates/pdb.yaml
+++ b/charts/templates/pdb.yaml
@@ -6,9 +6,9 @@ metadata:
   labels:
     {{- include "hyperfleet-api.labels" . | nindent 4 }}
 spec:
-  {{- if .Values.podDisruptionBudget.minAvailable }}
+  {{- if ne .Values.podDisruptionBudget.minAvailable nil }}
   minAvailable: {{ .Values.podDisruptionBudget.minAvailable }}
-  {{- else if .Values.podDisruptionBudget.maxUnavailable }}
+  {{- else if ne .Values.podDisruptionBudget.maxUnavailable nil }}
   maxUnavailable: {{ .Values.podDisruptionBudget.maxUnavailable }}
   {{- end }}
   selector:
