--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -74,16 +74,10 @@ spec:
           value: {{ .Values.auth.enableJwt | quote }}
         - name: ENABLE_AUTHZ
           value: {{ .Values.auth.enableAuthz | quote }}
-        {{- if .Values.adapters }}
-        {{- if .Values.adapters.cluster }}
         - name: HYPERFLEET_CLUSTER_ADAPTERS
-          value: {{ .Values.adapters.cluster | toJson | quote }}
-        {{- end }}
-        {{- if .Values.adapters.nodepool }}
+          value: {{ required "adapters.cluster is required - specify which adapters must be ready for clusters (e.g., [\"validation\",\"dns\",\"pullsecret\",\"hypershift\"])" .Values.adapters.cluster | toJson | quote }}
         - name: HYPERFLEET_NODEPOOL_ADAPTERS
-          value: {{ .Values.adapters.nodepool | toJson | quote }}
-        {{- end }}
-        {{- end }}
+          value: {{ required "adapters.nodepool is required - specify which adapters must be ready for nodepools (e.g., [\"validation\",\"hypershift\"])" .Values.adapters.nodepool | toJson | quote }}
         {{- if .Values.env }}
         {{- range .Values.env }}
         - name: {{ .name }}
