--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -4,7 +4,7 @@
 replicaCount: 1
 
 image:
-  registry: quay.io/openshift-hyperfleet
+  registry: CHANGE_ME
   repository: hyperfleet-api
   pullPolicy: Always
   tag: "latest"
